--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
       {% block content %} 
       <h2>Wellcome to Quizy </h2>
       <a id="h_start" href="/start">Start Quiz</a><br><br>
-      <p>&copy; 2025</p>
+      <p>&copy; 2025 Thank you for visiting</p>
       {% endblock %}
     </main>
   </div>
