--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,7 +15,9 @@
         <input type="password" id="password" name="password" placeholder="Enter password" required>
       </div>
     </div>
-    <button type="submit" class="login-btn">Register</button>
+    <div class="login">
+      <button type="submit" class="login-btn">Register Now</button>
+    </div>
   </form>
 </div>
 
